rearrange the task

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,144 +1,267 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 *{
-padding:0px;
-margin:0px;
-box-sizing:border-box;	
+	font-family:"poppins",sans-serif;
+    margin:0;
+	padding:0;
+	box-sizing:border-box;
+}
+
+body{
+	background-color:#4b4b4b;
+
+}
+
+header{
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	z-index:99;
+	background-color: #ff4757;
+}
+
+.nav{
+	max-width:1200px;
+    margin:auto;
+	width:100%;
+	height:50px;
+	display: flex;
+	justify-content:space-between;
+	align-items: center;
+}
+
+.logo{
+	font-size:1.5rem;
+	font-weight:500;
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #ffffff;
+}
+
+.box{
+	color:white;
+	width:30px;
+	height:30px;
+	text-align:center;
+	
+	position:relative;
+}
+
+.cart-count{
+
+	position:absolute;
+	background-color:black;
+	top:-7px;
+	right:0;
+	padding:3px;
+	height:20px;
+	width:20px;
+	line-height: 20px;
+	border-radius:50%;
+	z-index:99;
+}
+
+#cart-icon{
+
+ font-size: 1.5rem;
+ cursor:pointer;
+ padding-top:10px
+
+}
+
+/*cart */
+
+.img{
+	width:100%;
 }
 .container{
-display: flex;
-	padding-left:15px;
-	padding-right:15px;
-	margin: 0 auto;
-	flex-wrap:wrap; 	
-}
-/* style for header content */
-
-.header{
-width:100%;
-background-color:lightblue;
-border: 2px solid white;
-}
-.head{
-width:50%;	
-padding:25px 0px;	
-text-align:center;
-}
-.head-a{
-text-decoration:none;
-font-family: 'Roboto', sans-serif;
-font-size:30px;
-color:white;	
-}
-.shopbtn{
-width:50%;
-padding:25px 0px;
-text-align:right;	
-}
-#shopicon{
-text-decoration:none;	
-}
-#shopicon i{
-font-size:30px;	
-color:white;	
-} 
-/* style for shop-cart */
-.shopcart{
-background-color:lightblue;		
+	max-width:1200px;
+	padding:4rem;
+	margin:auto;
+	width:100%;
 }
 
-.maindiv{
-width:100%;
-display:flex;
-height:400px;		
+h2.title{
+	font-size:1.1rem;
+	margin-bottom:1.5rem;
+	color:#ffffff;
+	font-weight: 500;
+
 }
-.ban1{
-width:50%;
+
+.shop-content{
+	width:100%;
+	display:flex;
+	flex-wrap: wrap;
 	
 }
 
+.pro-box{
+	width:33.33%;
+	position: relative;
+	
+	box-shadow:0 1px 4px rgba(40,37,37,0.1);
+border-radius:3px;
+background-color:#ffff;
+}
 
-/* style for shop-cart1 */
-.carts1{
+
+.pic{
+overflow:hidden;
+padding: 10px;
+}
+
+.pic:hover img{
+
+	transform: scale(1.5);
+
+}
+
+.food-img{
 	width:100%;
-	display:flex;
-}
-.probox{
-padding:10px;
-width:25%;
-}
-.probox2{
-background-color:lightblue;		
-text-align:center;
-}
-.proimg{
-width:100%;	
-height:80%;
-
-}
-.proname{
-margin:0px;
-padding:5px;
-font-family: 'Roboto', sans-serif;
-color:white;
-}
-.proprice{
-color:white;
-font-size:20px;
+	transition: 0.5s;
+	object-fit: cover;
 }
 
-/* shop cart icon created div style */
-#ctdiv1{
-width:35%;
-border:2px solid white;
-background-color:lightblue;	
-position:absolute;
-top:90px;
-right:0px;
-height:400px;
-text-align:center;
-overflow: auto;
-}
-.head-cart{
-color:white;
-display:inline-block;
-font-size:20px;	
-margin:10px;
-}
-.colsect{
-display:inline-block;
-text-align:left;	
+.food-title{
+
+	font-size:1rem;
+	font-weight:600;
+	
 }
 
-/* product click create cart style */
+.food-price{
 
-.ctdiv2{
-width:100%;
-border: 2px solid white;
-display:flex;	
+	font-weight:500;
+
 }
-.ctdiv3{
-width:40%;
-border: 2px solid white;	
-}
-.ctdiv4{
-width:60%;
-border: 2px solid white;	
-}
-.toamt{
-	text-align:right;
-}
-.ctdiv5{
-width:100%;
-border: 2px solid white;
-text-align:left;
-}
-.ctimg{
-	width:100%;
-}
-.ctby{
-	width:40%;
+
+.add-cart{
+
+	position:absolute;
+    bottom:0;
+	right:0;
+	background-color:greenyellow;
 	color:white;
-	background-color:lightblue;
-	padding:15px;
-	border:2px solid white;
+	padding:10px;
+	font-size:1.1rem;
+	cursor:pointer;
 }
+
+.add-cart:hover{
+	background-color:rgba(255,0,0,0.786)
+}
+
+.cart{
+	position:fixed;
+	top:0;
+	right:-100%;
+	width:400px;
+	height:100vh;
+
+	overflow-y: auto;
+	padding:20px;
+	background-color: white;
+	box-shadow:0 1px 4px rgba(40,37,37,0.1);
+	z-index:100;
+}
+
+.cart-active{
+	right:0;
+	transition: 0.5s;
+}
+
+.cart-title{
+
+text-align:center;
+font-size:1.5rem;
+font-weight:500;
+margin-bottom:1 rem;
+border-bottom:3px solid  rgba(0,0,0,0.1);
+	
+}
+
+.cart-box{
+	display: flex;
+	margin-top:1rem;
+	border-bottom:3px solid  rgba(0,0,0,0.1);
+    padding-bottom:10px;
+}
+
+.cart-img{
+	width:75px;
+	height:75px;
+	object-fit:cover;
+	border:2px solid rgba(0,0,0,0.1);
+	padding:5px;
+
+}
+
+ .price-box{
+	display:flex;
+	justify-content:space-between;
+
+ }
+
+ .cart-food-title{
+	font-size:1rem;
+	text-transform:uppercase;
+	color:orangered;
+	font-weight: 500;
+ }
+
+ .cart-price{
+	font-weight:500;
+
+ }
+
+ .cart-quantity{
+	border:1px solid rgba(0,0,0,0.1);
+	outline:none;
+	width:2.4rem;
+	text-align:center;
+font-size:1rem;
+ }
+
+ .cart-remove{
+	font-size:25px;
+	color:red;
+	cursor:pointer;
+ }
+
+ .total{
+
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 1.5rem;
+
+ }
+ .total-title{
+font-size: 1rem;
+font-weight: 600;
+
+ }
+
+ .total-price{
+margin-left: 0.5rem;
+
+ }
+
+ .btn-buy{
+
+	padding: 12px 20px;
+	background-color: black;
+	color:#ffffff;
+	border:none;
+	font-size:1rem;
+	font-weight: 500;
+	cursor:pointer;
+ }
+
+ #cart-close{
+
+	position:absolute;
+	top:1rem;
+	right:0.8rem;
+	font-size: 2rem;
+    cursor: pointer;
+ }
